[project]
name = "picarx-security-baseline"
version = "0.1.0"
description = "Read-only Raspberry Pi / PiCar-X security baseline checks for robotics labs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Musaab Hasan" }
]
license = { text = "MIT" }
keywords = ["raspberry-pi", "picarx", "iot-security", "robotics", "cybersecurity"]

[project.scripts]
picarx-security-baseline = "picarx_security_baseline.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
